# simple-planet

./: CMakeLists.txt  build.zig  build.zig.zon
src/: gl_shader_setup.zig  glfw_setup.zig  glfw_utils.zig  main.cc  main.zig  shader_utils.zig
src/glad/: glad.c
src/shader/: vert.glsl
